# conecta-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  PLANNING.md  README.md  TASK.md  alembic.ini  check_db.py  check_users.py  cloudbuild.yaml  coverage.xml  create-user.js  docker-compose.db.yml  docker-compose.test.yml  docker-compose.yml  env.example  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  railway.toml  recreate_tables.py  render.yaml  requirements.txt  run_tests.ps1  setup.cfg  start-dev.ps1  start-staging.ps1  tailwind.config.ts  test_auth_flow.py  test_health.py  test_login.py  test_register.py  tsconfig.node.json
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 236481ce2a8f_add_user_model.py  27dc9f8a346e_add_language_and_timestamps_to_user_.py
app/: main.py
app/api/: deps.py
app/core/: config.py  email.py  i18n.py  limiter.py  security.py
app/db/: base.py  models.py  session.py
app/email-templates/: reset_password.html  test_email.html
app/schemas/: auth.py  email.py  token.py  user.py
app/services/: email.py
app/tests/: conftest.py  test_auth.py  test_email.py  test_i18n.py  test_rate_limit.py
prisma/: schema.prisma  seed.ts
scripts/: create-user.ts  test-connection.js  test-db-connection.ts  test-db.ts
src/: middleware.ts  middleware.ts.new
src/app/: globals.css  layout.tsx  page.tsx
src/components/: icons.tsx  providers.tsx
src/hooks/: use-session.ts
src/lib/: prisma.ts  use-toast.ts  utils.ts
src/types/: next-auth.d.ts
venv311/: pyvenv.cfg
(+28 files in other folders)
